# get_rss_feed

./: com.tsutsuikana.getfeed.plist  get_rss_feed.py  pyproject.toml  rss_urls.txt  tag_list.txt
